fix aligmnet on small screens

--- a/css/main.css
+++ b/css/main.css
@@ -957,7 +957,7 @@ header ul li a {
     .heading {
         text-align: center;
         margin-bottom: 40px;
-        margin-top: 50px
+        margin-top: 80px;
     }
     .bg11 {
         height: 775px !important
